{
    "name": "MainInput",
    "maps": [
        {
            "name": "KeyBoardPlayer",
            "id": "0589854e-3b54-46c7-9c52-996a09137676",
            "actions": [
                {
                    "name": "LightXAxis",
                    "type": "Value",
                    "id": "cd2d1007-57da-474b-be09-7a07ef86ad5e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HeavyXAxis",
                    "type": "Value",
                    "id": "780169ca-21c8-4eb5-9cf1-beed5c9b1347",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LightJump",
                    "type": "Button",
                    "id": "10e44f65-078c-426c-8024-4deeedcf3f39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "HeavyDash",
                    "type": "Value",
                    "id": "067303c1-5925-4e11-98be-4f4fadaea9c1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "dcbe2a45-ddf4-492d-85e8-fabcdf8dc006",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightXAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "859a79bb-b079-4525-a93a-108830e70bba",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightXAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c4950c56-6b04-40bc-af93-ea5ee2342cfa",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightXAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2db29862-aae2-473f-9874-2ca74baf25f3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "d39abc57-1327-4c6a-b39c-466db54b25dd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyXAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "396fbade-658d-4bce-b344-6260edbbb50c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyXAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "edb2f60c-49a0-4706-a0b4-1794a024297a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyXAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "c6ab8224-c69c-47ff-86b3-eebd84febd79",
                    "path": "1DAxis",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyDash",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "83452947-d024-44e5-ad28-ad350e11b1cb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyDash",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "033a3505-4dc0-4ea6-9e65-152fb24fc832",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyDash",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}